# lostbobo

./: .aimodelrules  .dockerignore  .env  .env.example  .env.schema  .gitattributes  .gitignore  .gitmodules  .infisical.json  .pre-commit-config.yaml  .vercelignore  AI_DIRECTIVES.md  ALPHA_PILOT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  COMPREHENSIVE_AUDIT.md  Completed.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.autoscaler  Dockerfile.unified  Dockerfile.worker  GEMINI.md  GUIDE.md  INFISICAL_SECRETS_TEMPLATE.md  LOG.md  MISSION_CONTROL_STRATEGY.md  Makefile  Makefile.chaos  PROGRESS.md  README.md  ROADMAP.md  SYSTEM.md  VIRTIOFS_OPTIMIZATION_SUMMARY.md  antigravity.config.json  api.py  build.fingerprint  build_log.txt  ci.sh  (+29 more)
backend/: Dockerfile  __init__.py  __main__.py  ci.sh  pyproject.toml  requirements.txt  ruff.toml  test_beam_orchestrator.py
backend/agents/: research_director.py
backend/api/routes/: governance.py
backend/app/: __init__.py  gateway.py  main.py
backend/app/api/: admin.py  agent_routes.py  api_router.py  auth.py  capability_invoke.py  compiler_api.py  core_graph.py  dag.py  document_api.py  flywheel.py  graph_viz.py  graphrag.py  main.py  ml.py  observability.py  observability_dag.py  rag.py  rag_edge.py  reports.py  router.py  s3_storage.py  sla_monitor.py  swarm.py  world_routes.py  world_state.py
backend/app/core/: config.py  supabase.py  vector_search.py
backend/app/services/: mercury.py  mercury_ai.py  onboarding_service.py  pdf_service.py  simulation_utils.py
backend/autoscaler/: main.py  policy.py  predictor.py  scaler_engine.py
backend/compiler/runtime/: loader.py
backend/core/: supabase_job_store.py  tracing.py
backend/core/agents/: analyst.py  base.py  base_agent.py  orchestrator.py  planner.py  rag_agent.py  reasoning_agent.py  simulation_agent.py
backend/core/auth/: policy_engine.py
backend/core/causal/: engine.py  models.py
backend/core/document/: capabilities.py  pdf_certificate_service.py  pdf_ingestion.py  pdf_service.py
backend/core/embedding/: service.py
backend/core/engine/: kernel.py
backend/core/evaluation/: ab_test.py
backend/core/execution/: __init__.py  arbitration.py  models.py  queue.py  runpod_client.py  simulation_executor.py  streaming.py
backend/core/extractor/: claim_extractor.py
backend/core/governance/: health.py  metrics.py  service.py
backend/core/hardware/: __init__.py  attestation.py  bin_packing.py  bin_packing_dynamic.py  economics.py  forecasting.py  fractional.py  isolation.py  ml_integration.py  mps.py  placement.py  pools.py
backend/core/kernel/: command_bus.py  kernel.py  middleware.py
backend/hardware/: hardware.py
backend/ml/: registry.py
backend/physics/: coupler.py
backend/plugins/: __init__.py  base.py  loader.py  registry.py
backend/reasoning/: planner.py
backend/runtime/: autoscaler.py  bootstrap.py  cache.py  capabilities.py  ci_runner.py  contract.py  dag_executor.py  diff.py  diff_engine.py  engine.py  execution_intelligence.py  fallback.py  graph.py  job.py  kernel.py  kernel_boot.py  manifest.py  nodes.py  optimizer.py  orchestrator.py  persistent_queue.py  physics_nodes.py  planner.py  queue.py  replay.py  replay_diff.py  safe_exec.py  sandbox.py  state.py  test_isolation.py  tool_registry.py  trace.py  visualizer.py
backend/scripts/: auto_stop.py  docker-quickstart.sh  pull_and_restart.sh
backend/sdk/: ebpf_enforcer.py  isolation_router.py  runtime_contract.py  wasm_runtime.py  world_service.py
backend/security/: metrics_middleware.py
backend/skills/: panic_button.py
backend/tests/: test_async_queue_integration.py  test_isolation_standalone.py
backend/tools/: bootstrap.py  check_api_purity.py  ci_gate.py  ci_graph.py  ci_manifest.yml  run_ci.py  setup_hooks.sh  update_runpod.py
backend/worker/: Dockerfile  __init__.py  kernel.py  worker.py
(+1162 files in other folders)
