[project]
name = "simhpc"
version = "3.5.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "redis>=4.5.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27.0",
    "supabase>=2.4.0",
    "postgrest>=0.16.0",
    "python-jose[cryptography]>=3.3.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0",
    "tenacity>=8.2.3",
    "orjson>=3.10.1",
    "loguru>=0.7.2",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]

# CPU worker only
worker = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "celery>=5.3.0",
    "gunicorn>=21.0.0",
]

# GPU isolated (never installed in API image)
gpu = [
    "torch>=2.0.0",
]

# Dev / CI only
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff==0.4.4",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tools*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I", "TID"]
ignore = ["E402", "B008", "B904", "E501", "UP042", "B007"]
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"backend.app" = { msg = "app cannot be imported outside API layer" }
"backend.worker" = { msg = "worker cannot be imported outside worker layer" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
