[project]
name = "simhpc"
version = "3.5.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "redis>=4.5.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27.0",
    "supabase>=2.4.0",
    "postgrest>=0.16.0",
    "python-jose[cryptography]>=3.3.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0",
    "tenacity>=8.2.3",
    "orjson>=3.11.0",
    "loguru>=0.7.2",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
worker = [
    "numpy>=1.24,<2.2",
    "scipy",
    "matplotlib",
    "celery",
]

dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tools*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I", "TID"]
ignore = ["E402", "B008", "B904", "E501", "UP042", "B007"]
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"backend.app" = { msg = "app cannot be imported outside API layer" }
"backend.worker" = { msg = "worker cannot be imported outside worker layer" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
