[project]
name = "simhpc"
version = "3.5.0"
dependencies = [
    "reportlab",
    "qrcode[pil]",
    "requests",
    "pandas",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "numpy>=2.2.6,<2.3",
    "pillow",
    "python-dotenv",
    "annotated-doc",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tools*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
